--- a/spring-boot-with-activiti/src/main/resources/application.yml
+++ b/spring-boot-with-activiti/src/main/resources/application.yml
@@ -6,6 +6,6 @@ security:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/process-center?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://192.168.13.50:3306/activiti?useUnicode=true&amp;characterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
     username: root
     password: root
